--- a/bookstore-api/Bookstore.Api/Bookstore.Api.csproj
+++ b/bookstore-api/Bookstore.Api/Bookstore.Api.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+	<LangVersion>11</LangVersion>
+	<TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>1ada715c-607b-4b9e-aacd-5df0a69a8cae</UserSecretsId>
@@ -11,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.0">
 		<PrivateAssets>all</PrivateAssets>
@@ -19,11 +21,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Bookstore.DataAccess\Bookstore.DataAccess.csproj" />
+    <ProjectReference Include="..\Bookstore.BusinessLogic\Bookstore.BusinessLogic.csproj" />
+    <ProjectReference Include="..\Bookstore.DataAccess\Bookstore.DataAccessSQL.csproj" />
   </ItemGroup>
 
 </Project>
