Add CORS policy and publishers view

--- a/bookstore-api/Bookstore.Api/appsettings.Development.json
+++ b/bookstore-api/Bookstore.Api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookstoreDbDev;Trusted_Connection=True;"
-  }
+  },
+  "AllowedOrigins": [
+    "https://localhost:7041"
+  ]
 }
