--- a/bookstore-api/Bookstore.Api/appsettings.Development.json
+++ b/bookstore-api/Bookstore.Api/appsettings.Development.json
@@ -8,6 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookstoreDbDev;Trusted_Connection=True;"
   },
+  "DataAccess": {
+    "UseMockDataAccess": true
+  },
   "AllowedOrigins": [
     "https://localhost:7041"
   ]
