Rename api project

--- a/bookstore-api/Bookstore.Api/appsettings.Development.json
+++ b/bookstore-api/Bookstore.Api/appsettings.Development.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=BookstoreDbDev;Trusted_Connection=True;"
   },
   "DataAccess": {
-    "UseMockDataAccess": true
+    "UseMockDataAccess": false
   },
   "AllowedOrigins": [
     "https://localhost:7041"
