Add Dockerfile and docker-compose for bookstore api

--- a/bookstore-api/Dockerfile
+++ b/bookstore-api/Dockerfile
@@ -8,19 +8,19 @@ FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
 WORKDIR /src
 COPY *.sln .
 
-COPY Bookstore.Core/*.csproj ./Playmate.Social.Domain/
-COPY Bookstore.Interfaces/*.csproj ./Playmate.Social.Domain/
-COPY Bookstore.BusinessLogic/*.csproj ./Playmate.Social.Domain/
-COPY Bookstore.DataAccess/*.csproj ./Playmate.Social.Application/
-COPY Bookstore.DataAccessMock/*.csproj ./Playmate.Social.Infrastructure/
-COPY Playmate.Api/*.csproj ./Playmate.Social.WebAPI/
-RUN dotnet restore "./Playmate.Social.WebAPI/Playmate.Social.WebAPI.csproj"
+COPY Bookstore.Core/*.csproj ./Bookstore.Core/
+COPY Bookstore.Interfaces/*.csproj ./Bookstore.Interfaces/
+COPY Bookstore.BusinessLogic/*.csproj ./Bookstore.BusinessLogic/
+COPY Bookstore.DataAccess/*.csproj ./Bookstore.DataAccess/
+COPY Bookstore.DataAccessMock/*.csproj ./Bookstore.DataAccessMock/
+COPY Bookstore.Api/*.csproj ./Bookstore.Api/
+RUN dotnet restore "./Bookstore.Api/Bookstore.Api.csproj"
 
 # Copy everything else to our current working directory and publish
 COPY . .
-RUN dotnet publish "./Playmate.Social.WebAPI/Playmate.Social.WebAPI.csproj" -c Release -o /app/publish --no-restore
+RUN dotnet publish "./Bookstore.Api/Bookstore.Api.csproj" -c Release -o /app/publish --no-restore
 
 FROM base AS final
 WORKDIR /app
 COPY --from=build-env /app/publish .
-ENTRYPOINT ["dotnet", "Playmate.Social.WebAPI.dll"]
+ENTRYPOINT ["dotnet", "Bookstore.Api.dll"]
