Add Dockerfile for blazor app with nginx.conf

--- a/bookstore-api/Dockerfile
+++ b/bookstore-api/Dockerfile
@@ -1,7 +1,6 @@
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
 
 # Copy .csproj files and restore project dependencies
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build-env
@@ -14,11 +13,11 @@ COPY Bookstore.BusinessLogic/*.csproj ./Bookstore.BusinessLogic/
 COPY Bookstore.DataAccess/*.csproj ./Bookstore.DataAccess/
 COPY Bookstore.DataAccessMock/*.csproj ./Bookstore.DataAccessMock/
 COPY Bookstore.Api/*.csproj ./Bookstore.Api/
-RUN dotnet restore "./Bookstore.Api/Bookstore.Api.csproj"
+RUN dotnet restore ./Bookstore.Api/Bookstore.Api.csproj
 
 # Copy everything else to our current working directory and publish
 COPY . .
-RUN dotnet publish "./Bookstore.Api/Bookstore.Api.csproj" -c Release -o /app/publish --no-restore
+RUN dotnet publish ./Bookstore.Api/Bookstore.Api.csproj -c Release -o /app/publish --no-restore
 
 FROM base AS final
 WORKDIR /app
